# octradotnet

./: .gitignore  .gitmodules  flake.nix  justfile
OctraDotNet/: CMakeLists.txt  Circle.cs  DynArray.cs  DynArrayInt.cs  Program.cs  SWIGTYPE_p_double.cs  SWIGTYPE_p_int.cs  SWIGTYPE_p_std__vectorT_double_t.cs  SWIGTYPE_p_std__vectorT_int_t.cs  justfile  octradotnet.cs  octradotnetPINVOKE.cs
OctraDotNet/octra/: octra_wrap.cpp
OctraDotNet/octra/c/: all.hpp  debug.hpp  dynarray_c.cpp  dynarray_c.hpp  linked_list.cpp  linked_list.hpp  octra_io.cpp  octra_io.hpp  single_link_node.cpp  single_link_node.hpp
OctraDotNet/octra/cxx/: circle.cpp  circle.hpp  dynarray.cpp  dynarray.hpp  hello.cpp  hello.hpp
